#503 Правки по замечаниям